--- a/webstore-search/pom.xml
+++ b/webstore-search/pom.xml
@@ -6,25 +6,24 @@
     <version>0.0.1-SNAPSHOT</version>
   </parent>
   <groupId>com.risen</groupId>
-  <artifactId>webstore-rest</artifactId>
+  <artifactId>webstore-search</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   <packaging>war</packaging>
   
   <!-- 依赖管理 -->
   <dependencies>
-  		<!-- 单元测试 -->
-		<dependency>
-			<groupId>junit</groupId>
-			<artifactId>junit</artifactId>
-			<scope>test</scope>
-		</dependency>
-  		<dependency>
-  			<groupId>com.risen</groupId>
-  			<artifactId>webstore-manager-mapper</artifactId>
-  			<version>0.0.1-SNAPSHOT</version>
-  		</dependency>
-  
-		<!-- Spring -->
+	  	<dependency>
+		  	<groupId>com.risen</groupId>
+		    <artifactId>webstore-common</artifactId>
+		    <version>0.0.1-SNAPSHOT</version>
+	  	</dependency>
+	  	<dependency>
+		  	<groupId>com.risen</groupId>
+		    <artifactId>webstore-manager-mapper</artifactId>
+		    <version>0.0.1-SNAPSHOT</version>
+	  	</dependency>
+	  	
+	  	<!-- Spring -->
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-context</artifactId>
@@ -58,18 +57,15 @@
 			<scope>provided</scope>
 		</dependency>
 		
-		<!-- Redis客户端 -->
-		<dependency>
-			<groupId>redis.clients</groupId>
-			<artifactId>jedis</artifactId>
-		</dependency>
 		<!-- solr客户端 -->
 		<dependency>
 			<groupId>org.apache.solr</groupId>
 			<artifactId>solr-solrj</artifactId>
 		</dependency>
-	</dependencies>
-	<!-- 插件 -->
+  </dependencies>
+  
+  
+  	<!-- 插件 -->
   	<build>
 		<!-- 配置插件 -->
 		<plugins>
@@ -77,7 +73,7 @@
 				<groupId>org.apache.tomcat.maven</groupId>
 				<artifactId>tomcat7-maven-plugin</artifactId>
 				<configuration>
-					<port>8081</port>
+					<port>8083</port>
 					<path>/</path>
 				</configuration>
 			</plugin>
