--- a/webstore-portal/src/main/resources/properties/resource.properties
+++ b/webstore-portal/src/main/resources/properties/resource.properties
@@ -4,8 +4,8 @@ REST_BASE_URL=http\://localhost\:8081/rest
 #\u9996\u9875\u5927\u5e7f\u544a\u4f4durl
 REST_INDEX_AD_URL=/content/list/89
 
-#\u641c\u7d22\u670d\u52a1\u57fa\u7840url
-SEARCH_BASE_URL=http://192.168.25.136:8081/search/query
+#\u641C\u7D22\u670D\u52A1\u63A5\u53E3
+SEARCH_BASE_URL=http://localhost:8083/search/query
 
 #\u5546\u54c1\u57fa\u672c\u4fe1\u606furl
 ITME_INFO_URL=/item/info/
