--- a/webstore-rest/src/main/resources/properties/constant.properties
+++ b/webstore-rest/src/main/resources/properties/constant.properties
@@ -1,2 +1,8 @@
 #\u9996\u9875\u4FE1\u606F\u518Dredis\u4E2D\u7684\u4E3Bkey
 INDEX_CONTENT_REDIS_HASHKEY=INDEX_CONTENT_REDIS_HASHKEY
+
+#\u5546\u54C1\\u4FE1\u606F\u518Dredis\u4E2D\u7684\u57FA\u7840key
+REDIS_ITEM_KEY=REDIS_ITEM_KEY
+
+#\u5546\u54C1\u518Dredis\u4E2D\u7684\u8FC7\u671F\u65F6\u95F4
+REDIS_ITEM_EXPIRE=86400
