--- a/webstore-portal/src/main/resources/properties/resource.properties
+++ b/webstore-portal/src/main/resources/properties/resource.properties
@@ -8,11 +8,11 @@ REST_INDEX_AD_URL=/content/list/89
 SEARCH_BASE_URL=http://localhost:8083/search/query
 
 #\u5546\u54c1\u57fa\u672c\u4fe1\u606furl
-ITME_INFO_URL=/item/info/
+ITEM_BASE_URL=http://localhost:8081/rest/detail/base/
 #\u5546\u54c1\u63cf\u8ff0\u7684url
-ITEM_DESC_URL=/item/desc/
+ITEM_DESC_URL=http://localhost:8081/rest/detail/desc/
 #\u5546\u54c1\u7684\u89c4\u683c\u53c2\u6570url
-ITEM_PARAM_URL=/item/param/
+ITEM_PARAM_URL=http://localhost:8081/rest/detail/param/
 
 #\u5355\u70b9\u767b\u5f55\u7cfb\u7edf\u7684url
 SSO_BASE_URL=http://192.168.25.136:8082
