--- a/webstore-portal/src/main/resources/properties/resource.properties
+++ b/webstore-portal/src/main/resources/properties/resource.properties
@@ -19,9 +19,9 @@ SSO_BASE_URL=http://192.168.25.136:8082
 #\u5355\u70b9\u767b\u5f55\u7cfb\u7edf\u57df\u540d
 SSO_DOMAIN_BASE_USRL=http://sso.taotao.com
 #\u6839\u636etoken\u53d6\u7528\u6237\u4fe1\u606furl
-SSO_USER_TOKEN=/user/token/
+SSO_USER_TOKEN=http://localhost:8084/user/token/
 #\u5355\u70b9\u767b\u5f55\u7cfb\u7edf\u767b\u5f55url
-SSO_PAGE_LOGIN=/page/login
+SSO_PAGE_LOGIN=http://localhost:8084/page/login
 
 #\u8ba2\u5355\u7cfb\u7edf\u57fa\u7840url
 ORDER_BASE_URL=http://192.168.25.136:8083/order
