add item to cart

--- a/webstore-portal/src/main/resources/properties/constant.properties
+++ b/webstore-portal/src/main/resources/properties/constant.properties
@@ -14,6 +14,9 @@ ITEM_DESC_URL=http://localhost:8081/rest/detail/desc/
 #\u5546\u54c1\u7684\u89c4\u683c\u53c2\u6570url
 ITEM_PARAM_URL=http://localhost:8081/rest/detail/param/
 
+CART_COOKIE_KEY=MY_CART
+CART_REDIS_KEY=Cart:userid:
+
 #\u5355\u70b9\u767b\u5f55\u7cfb\u7edf\u7684url
 SSO_BASE_URL=http://192.168.25.136:8082
 #\u5355\u70b9\u767b\u5f55\u7cfb\u7edf\u57df\u540d
