--- a/webstore-manager/webstore-manager-web/src/main/resources/properties/ftp.properties
+++ b/webstore-manager/webstore-manager-web/src/main/resources/properties/ftp.properties
@@ -4,10 +4,10 @@ FTP_ADDRESS=192.168.1.114
 FTP_PORT=21
 FTP_USERNAME=ftpuser
 FTP_PASSWORD=#51801
-FTP_BASE_PATH=/home/ftpuser/www/images
+FTP_BASE_PATH=/usr/local/nginx/html/images
 #\u56fe\u7247\u670d\u52a1\u5668\u7684\u76f8\u5173\u914d\u7f6e
 #\u56fe\u7247\u670d\u52a1\u5668\u7684\u57fa\u7840url
-IMAGE_BASE_URL=http://192.168.1.114/images
+IMAGE_BASE_URL=http\://192.168.1.117/images
 
 #\u670d\u52a1\u5c42\u57fa\u7840url
 REST_BASE_URL=http://192.168.1.114:8080/rest
