--- a/webstore-portal/src/main/resources/properties/constant.properties
+++ b/webstore-portal/src/main/resources/properties/constant.properties
@@ -16,6 +16,8 @@ ITEM_PARAM_URL=http://localhost:8081/rest/detail/param/
 
 CART_COOKIE_KEY=MY_CART
 CART_REDIS_KEY=Cart:userid:
+#\u8D2D\u7269\u8F66cookie\u4FDD\u5B58\u7684\u671F\u9650\u4E3A7\u5929
+CART_COOKIE_MAXAGE=604800
 
 #\u5355\u70b9\u767b\u5f55\u7cfb\u7edf\u7684url
 SSO_BASE_URL=http://192.168.25.136:8082
