--- a/webstore-sso/src/main/resources/properties/constant.properties
+++ b/webstore-sso/src/main/resources/properties/constant.properties
@@ -3,3 +3,6 @@ REDIS_USER_SESSION_KEY=REDIS_USER_SESSION_KEY
 
 #\u7528\u6237session\u7684\u8FC7\u671F\u65F6\u95F4
 USER_SESSION_EXPIRE=1800
+
+#\u7528\u6237\u767B\u5F55\u8D2D\u7269\u8F66\u4FE1\u606F\u540C\u6B65url
+CART_SYNC_URL=http://localhost:8082/cart/sync.html
