--- a/webstore-rest/pom.xml
+++ b/webstore-rest/pom.xml
@@ -79,6 +79,9 @@
 				<configuration>
 					<port>8081</port>
 					<path>/</path>
+					<url>http://192.168.1.117:8080/manager/text</url>
+					<username>tomcat</username>
+					<password>#51801</password>
 				</configuration>
 			</plugin>
 		</plugins>
