--- a/webstore-sso/pom.xml
+++ b/webstore-sso/pom.xml
@@ -71,6 +71,9 @@
 				<configuration>
 					<port>8084</port>
 					<path>/</path>
+					<url>http://192.168.1.119:8080/manager/text</url>
+					<username>tomcat</username>
+					<password>#51801</password>
 				</configuration>
 			</plugin>
 		</plugins>
