--- a/webstore-portal/pom.xml
+++ b/webstore-portal/pom.xml
@@ -84,6 +84,9 @@
 				<configuration>
 					<port>8082</port>
 					<path>/</path>
+					<url>http://192.168.1.116:8080/manager/text</url>
+					<username>tomcat</username>
+					<password>#51801</password>
 				</configuration>
 			</plugin>
 		</plugins>
