--- a/webstore-search/pom.xml
+++ b/webstore-search/pom.xml
@@ -75,6 +75,9 @@
 				<configuration>
 					<port>8083</port>
 					<path>/</path>
+					<url>http://192.168.1.118:8080/manager/text</url>
+					<username>tomcat</username>
+					<password>#51801</password>
 				</configuration>
 			</plugin>
 		</plugins>
